--- a/templates/blog.html
+++ b/templates/blog.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-12 col-sm-2 text-center p-0 lst">
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="#"style="text-decoration:none;">Add Post</a></li>
+                    <li class="list-group-item"><a href="{% url 'blog:add_post' %}"style="text-decoration:none;">Add Post</a></li>
                     <li class="list-group-item"><a href="#"style="text-decoration:none;">Add Post</a></li>
                     <li class="list-group-item"><a href="#"style="text-decoration:none;">Add Post</a></li>
                 </ul>
@@ -79,6 +79,8 @@
                     <div class="media-body ml-4">
                         <p>{{post.desc}}
                         </p>
+                        <a href="{% url 'blog:edit_post' post.id %}"><button class="btn btn-secondary" type="button">Edit Post</button></a>
+                        <a href="{% url 'blog:delete' post.id%}"><button class="btn btn-secondary" type="button">Remove</button></a>
                         <button type="button" class="btn btn-primary " style="float: right;">Read more</button>
                     </div>
                 </div>
