--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,49 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <title>Blog</title>
-</head>
-<body>
-    <!--Navigation bar-->
-    <nav class="navbar navbar-expand-sm  bg-dark sticky-top">
-        <div class="container-fluid">
-            <img src="{% static 'images/w3newbie.png' %}" class="navbar-brand img-fluid" style="height:2em;" >
-            <button type="button" class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon "></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarResponsive">
-                <ul class="navbar-nav ml-auto list">
-                    <li class="nav-item ">
-                        <a class="nav-link " href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Contacts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">FAQ</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        
-    </nav>
+{% block content %}
     <!--background image-->
     <div class="container-fluid">
         <div class="row">
@@ -67,7 +24,8 @@
     <div class="container-fluid third">
         <div class="row">
             <div class="col-sm-8">
-                {% for post in posts %}
+                <div class="col-sm-11">
+                    {% for post in items %}
                 <h3 class="mb-0">{{post.topic}}</h3>
                 <h6 class="text-gray mb-0"><small>Posted on : {{post.date|date:"h D,M,Y"}}</small></h6>
                 <div class="progress mb-4" style="height: 5px;">
@@ -79,17 +37,33 @@
                     <div class="media-body ml-4">
                         <p>{{post.desc}}
                         </p>
-                        <a href="{% url 'blog:edit_post' post.id %}"><button class="btn btn-secondary" type="button">Edit Post</button></a>
-                        <a href="{% url 'blog:delete' post.id%}"><button class="btn btn-secondary" type="button">Remove</button></a>
-                        <button type="button" class="btn btn-primary " style="float: right;">Read more</button>
+                        <a href="{% url 'blog:edit_post' post.id %}"><button class="btn btn-secondary w-10 mt-2" type="button">Edit Post</button></a>
+                        <a href="{% url 'blog:delete' post.id%}"><button class="btn btn-secondary w-10 mt-2" type="button">Remove</button></a>
+                        <button type="button" class="btn btn-primary mt-2" style="float: right;">Read more</button>
                     </div>
                 </div>
                 <br>
                 {% endfor %}
-
-                
-                
+                </div>
+                <div class="col-sm-1">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            {% if items.has_previous %}
+                                
+                                <li class="page-item"><a href="?page={{ items.previous_page_number }}" class="page-link">Previous</a></li>
+                            {% endif %}
+                            <li class="page-item"><a href="?page=1" class="page-link">1</a></li>
+                            <li class="page-item"><a href="?page=2" class="page-link">2</a></li>
+                            <li class="page-item"><a href="?page=3" class="page-link">3</a></li>
+                            {% if items.has_next %}
+                                <li class="page-item"><a href="?page={{ items.next_page_number }}" class="page-link">Next</a></li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+                </div>
+                  
             </div>
+            
 
 
 
@@ -127,41 +101,19 @@
             </div>
         </div>
     </div>
+    
+    
 
-    <!--fourth container-->
-    <div class="container-fluid bg-dark">
-        <div class="row justify-content-center  text-center">
-            <div class="col-sm-3 hey">
-                <h4 class=" del mb-4"><small>DOOGEE</small></h4>
-                <p>Teardowns</p>
-                <p>News</p>
-                <p>Partners</p>
-                <p>About us</p>
-                <p>Contact us</p>
-                <p>Terms of use</p>
-            </div>
-            <div class="col-sm-3 hey">
-                <h4 class=" mb-4 "><small>SERVICES</small></h4>
-                <p>Compare</p>
-                <p>Download</p>
-                <p>Feedback</p>
-                <p>Bug report</p>
-            </div>
-            <div class="col-sm-3 hey">
-                <h4 class=" mb-4"><small>ACTIVITY</small></h4>
-                <p>Influencer</p>
-                <p>Affliate</p>
-                <p>Co-branding</p>
-                <p>Honor</p>
-                <p>Giveaway</p>
-            </div>
+
+    <div class="container-fluid">
+        <div class="row justify-content-center" style="padding:20px 0 20px 0;">
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook social" style="color:#4267B2;"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram social" style="color:#fb3958;"></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter social" style="color:#00acee;"></i></a>
+            <a href="https://www.googleplus.com" target="_blank"><i class="fab fa-google-plus-g social" style="color:#db4a39;"></i></a>
         </div>
     </div>
-    <hr class="hr">
-    <div class="container-fluid bg-dark">
-        <h4 class="text-center text-light m-0 p-4"><small>&copy; binay6014@gmail.com</small></h4>
-    </div>
+    
+{% endblock %}
 
 
-</body>
-</html>
