--- a/templates/edit_form.html
+++ b/templates/edit_form.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
+
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+    <div class="container-fluid">
         <form action="{% url 'blog:edit_post' post.id %}" method='post' enctype="multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
             <button name="submit">Submit</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
